src/test/deca/context/valid/created/sans_objet/condition_while_2.deca
// Description:
//    Condition  while
//
// Resultats:
//    
//
// Historique:
//    cree le 13/01/2024

{
   float x= 2.0;
   float y= 4.1;
   while (x<y){
      println("c'est ok");
      x=x+1;
   }
}
